Add all the colours

--- a/avail-colours.yml
+++ b/avail-colours.yml
@@ -1,12 +1,1385 @@
 ---
-- fc0e49
-- E8274B
-- B9D9FF
-- E6EFBB
-- 9DC3FF
-- 2ACCA8
-- 5A8164
-- 6a40fd
-- 1ac620
-- 882B0F
-- 02f88c
+- '000013'
+- 00001D
+- 0000A5
+- 0000CC
+- '000100'
+- '000913'
+- 000A00
+- 000D20
+- '001067'
+- '001300'
+- 00141A
+- '001624'
+- 001B00
+- 001B15
+- '002027'
+- 00216D
+- '002317'
+- '002332'
+- '002400'
+- 0025B4
+- '002626'
+- '002942'
+- 002CD8
+- 002E88
+- 002F1A
+- 002F3B
+- '003029'
+- '003100'
+- 00326B
+- '003439'
+- 0037A9
+- 003B1A
+- 003C2D
+- 003D62
+- 003D8F
+- 003E3C
+- 003F4C
+- '004000'
+- 0040CB
+- 00474D
+- '00482E'
+- '004960'
+- 004A1C
+- 004A40
+- 004B6E
+- '005160'
+- '005251'
+- '005541'
+- '005632'
+- '005775'
+- 005B63
+- 005D53
+- 005D8A
+- 005F74
+- '006000'
+- 0060AB
+- 00612D
+- '006346'
+- '006565'
+- '006687'
+- '006976'
+- '0069CE'
+- 006B59
+- 006C22
+- 006E41
+- 006FF2
+- 00716A
+- '007378'
+- '0078D2'
+- '007938'
+- 007A65
+- 007C51
+- 007E7B
+- 007EA0
+- '008665'
+- '008677'
+- '008745'
+- '00898D'
+- '008BA8'
+- '009189'
+- '009277'
+- '009659'
+- '009AB4'
+- '009EAA'
+- 00A092
+- 00A180
+- 00A4DC
+- 00A56A
+- 00A7CB
+- 00AA37
+- 00ABC0
+- 00ACF9
+- 00AE96
+- 00AF5D
+- 00B4BC
+- 00B4E5
+- 00BB4B
+- 00BDD2
+- 00C0AA
+- 00C3C2
+- 00C9EB
+- 00CCD8
+- 00CF53
+- 00D0C2
+- 00D59C
+- 00D8D8
+- 00DAF2
+- 00DDC1
+- 00E36C
+- 00E597
+- 00E6B7
+- 00E6D9
+- 00F457
+- 00F4D3
+- 00F7B5
+- 00F900
+- 00FDF2
+- '080027'
+- 0A0037
+- 0B1730
+- 0BBCFF
+- 0D0017
+- '100000'
+- '101853'
+- 110D00
+- '121500'
+- 14000D
+- 141C00
+- '142418'
+- '150020'
+- 152A13
+- '161625'
+- '172229'
+- 172B00
+- 172E31
+- 181E18
+- 182F29
+- 19002D
+- 190D01
+- 19162F
+- 1A2345
+- 1A3140
+- 1A3627
+- 1B0000
+- 1B0016
+- 1D003F
+- 1D153C
+- 1D1700
+- 1D3900
+- 1F1E00
+- '201522'
+- 203C3B
+- 204B00
+- '210020'
+- 210D00
+- '211619'
+- '212439'
+- '212617'
+- '212700'
+- 213B44
+- 21433A
+- 22000A
+- 22005F
+- '222018'
+- '222929'
+- '231600'
+- 23325B
+- '234530'
+- 242E27
+- 251D1A
+- 26142B
+- '263322'
+- 2659FF
+- '270017'
+- '270600'
+- '272328'
+- 27484E
+- 28002E
+- '281354'
+- '282352'
+- '283140'
+- '285549'
+- 29151D
+- 291F00
+- 29343A
+- '293517'
+- 294E4C
+- 29512D
+- 2A2542
+- 2A3400
+- 2A3878
+- 2B334C
+- 2C1716
+- 2C2800
+- 2C2816
+- 2C3938
+- 2C3D34
+- 2C4857
+- 2C5B41
+- 2C6B00
+- 2D0005
+- 2D1141
+- 2D54CB
+- 2E1575
+- 2E1902
+- 2E2519
+- 2E2D39
+- 2E2F26
+- 2E2F32
+- 2E3018
+- 2E47A2
+- 2E5D5A
+- 2F1F17
+- 2F4B65
+- 2F575D
+- 302C28
+- '304200'
+- '310025'
+- '314060'
+- 31653D
+- '321527'
+- 321F40
+- '322526'
+- '326454'
+- '332102'
+- 34131B
+- '343357'
+- 344F1D
+- '345973'
+- 35004F
+- '350700'
+- '351334'
+- '352438'
+- 35348F
+- '354846'
+- 35538E
+- 356A6C
+- '357190'
+- 357D82
+- '360017'
+- '363044'
+- 363B2B
+- '364449'
+- '366570'
+- '367037'
+- 372A00
+- '373500'
+- 37421A
+- '379596'
+- 383C44
+- '385100'
+- 392D17
+- '394052'
+- 39668B
+- 3A2157
+- 3A252C
+- 3A3419
+- 3A3427
+- 3A3F39
+- 3B1917
+- 3B2919
+- 3B2E28
+- 3B487A
+- 3B5249
+- 3B5E2D
+- 3B6478
+- 3B7D4A
+- 3D0040
+- 3D008F
+- 3D1D00
+- 3D2520
+- 3D462D
+- 3D5257
+- 3D7E73
+- 3E304F
+- 3E3E57
+- 3E493D
+- 3E4A56
+- 3E506F
+- 3F1100
+- 3F5C4A
+- 3F8871
+- 40000D
+- 40006B
+- 400F2A
+- '404021'
+- '404300'
+- '405432'
+- 4118AB
+- 41236F
+- 41313E
+- 418F00
+- '423261'
+- 425C5A
+- 431A49
+- 43223B
+- '432700'
+- '433336'
+- 43737B
+- '438093'
+- 44212E
+- 443C36
+- 44412F
+- 44448F
+- 444F1B
+- 445E81
+- '448984'
+- 454A6B
+- 454B4A
+- '455865'
+- '459150'
+- '460938'
+- '461220'
+- 46248C
+- '463828'
+- 463E4D
+- 46665D
+- '470100'
+- 4769C2
+- 47B500
+- '482318'
+- 48282A
+- '483412'
+- 483F62
+- '484750'
+- 484F61
+- 49473F
+- 4954AA
+- '496167'
+- 4979FE
+- '498790'
+- 49973B
+- 49BD6C
+- 4A3E24
+- 4A5200
+- 4A554F
+- 4A7E3A
+- 4A83C5
+- 4A8EAB
+- 4B1719
+- 4B2C50
+- 4B4E3C
+- 4B5948
+- 4B6A98
+- 4B6E2D
+- 4B7181
+- 4B7673
+- 4C1B00
+- 4C2DBF
+- 4C364D
+- 4C3732
+- 4C4619
+- 4C4F2D
+- 4C6378
+- 4CB075
+- 4D0025
+- 4D313B
+- 4D331B
+- 4D4141
+- 4D5D2D
+- 4D6B6B
+- 4DA062
+- 4E0059
+- 4E4B5F
+- 4E5FD5
+- 4E7A9A
+- 4E96A3
+- 4EA79D
+- 4F4ECA
+- 4F587D
+- 4F595B
+- 4F6144
+- 4F8200
+- '502600'
+- '504637'
+- 50565F
+- 50A78B
+- 50A7AC
+- '513890'
+- 513F48
+- 514B2F
+- '516956'
+- 51A953
+- '523900'
+- '524400'
+- 525D72
+- '527647'
+- 530E00
+- 531D3D
+- '534136'
+- 53455C
+- 53635A
+- 539DB6
+- 539FFF
+- 53EDFE
+- 544B45
+- 550D83
+- 55252E
+- '553046'
+- 55312B
+- '553266'
+- 554B52
+- 554E6E
+- 55564C
+- '558653'
+- 558E6A
+- 56001D
+- '563100'
+- '564127'
+- 56541E
+- 56646D
+- 56708A
+- 57004B
+- 572D18
+- 573A3B
+- 573E61
+- 57451E
+- '575561'
+- 577D6E
+- '578832'
+- 57B0FF
+- 57B5A1
+- '582250'
+- '585971'
+- 585C45
+- 586B3E
+- '587168'
+- 587D84
+- 58B5B2
+- 59211A
+- 59519A
+- 5963B2
+- '598381'
+- 598C7D
+- 5A0038
+- 5A6766
+- 5A7D8F
+- 5AB647
+- 5B3E2C
+- 5B5200
+- 5B5442
+- 5B54EA
+- 5B7076
+- 5B77D3
+- 5B9192
+- 5B9A00
+- 5C0014
+- 5C1A33
+- 5C4642
+- 5C6226
+- 5D3F4E
+- 5D4E34
+- 5D5935
+- 5D71AC
+- 5D755A
+- 5D86E0
+- 5D8A98
+- 5E25A4
+- 5E5262
+- 5E5555
+- 5E6855
+- 5E7935
+- 5EC4B8
+- 5F3540
+- 5F3819
+- 5F4017
+- 5F626D
+- 5F645B
+- 5F648D
+- 5F7A9D
+- 5FA37A
+- 5FB7C0
+- 5FCADB
+- 5FFFD0
+- '602300'
+- '603559'
+- 60511E
+- 6087A2
+- 611C26
+- 614D3B
+- 622E2E
+- 62484D
+- '626000'
+- 626D7B
+- '627977'
+- '629562'
+- 62987E
+- 629A91
+- 62D04B
+- '630072'
+- '634036'
+- 6345A3
+- 634E6D
+- 635B80
+- 63BEE8
+- 63C59C
+- 63DAE1
+- 64677C
+- 648C00
+- 64A6B3
+- 64E2AA
+- 652B46
+- '653225'
+- 6541C8
+- 6560A0
+- '656153'
+- 656BCD
+- 657F56
+- 65C7C8
+- 65FFAE
+- '662010'
+- '663000'
+- 664E00
+- 66534B
+- 66555B
+- 666E72
+- 66702B
+- '667167'
+- 6684B6
+- 66924C
+- 66A03E
+- 66D1B9
+- 66E78C
+- '674560'
+- '677297'
+- '677883'
+- 677B6B
+- 67D9CF
+- 68482C
+- 684F5E
+- 685C3F
+- 685E22
+- 68744F
+- 68AA00
+- 69114E
+- 693E3F
+- 69502B
+- 69822A
+- 69857B
+- 6A316A
+- 6A3C00
+- 6A3E29
+- 6A6265
+- 6A7100
+- 6A758B
+- 6A8548
+- 6A888B
+- 6A8B74
+- 6ACA6C
+- 6AFF82
+- 6B3F8E
+- 6B4C3C
+- 6B5C75
+- 6B663A
+- 6B6B56
+- 6B91FF
+- 6B97D4
+- 6BE5C4
+- 6C002D
+- 6C755F
+- 6C8094
+- 6CA15E
+- 6CAAC6
+- 6CB28F
+- 6CE900
+- 6D0061
+- 6D3D52
+- 6D4C48
+- 6D6783
+- 6D6E68
+- 6DA897
+- 6DBE83
+- 6DE76A
+- 6DF1DD
+- 6E00FE
+- 6E519A
+- 6E5940
+- 6E5ECE
+- 6E655F
+- 6E6B76
+- 6E6CB3
+- 6E7876
+- 6E8590
+- 6E98A6
+- 6F0099
+- 6F0D3F
+- 6F5C00
+- 6F8C66
+- 6FA2A2
+- '703118'
+- 705C2F
+- 705E5C
+- 706B23
+- 707A43
+- 707F00
+- 70928C
+- 70B567
+- 712C58
+- '714851'
+- '715980'
+- '719237'
+- 71D293
+- 722DBD
+- 72416C
+- '726551'
+- '727071'
+- 72738C
+- 72767F
+- '728165'
+- '730022'
+- 732D29
+- 73411A
+- '735559'
+- 736A4C
+- 736FA0
+- 73724C
+- 742E9D
+- 743F37
+- 74546E
+- 745A49
+- 747D71
+- '748480'
+- 749B77
+- 756F60
+- 761D78
+- 7655FF
+- 765D6A
+- 7675E0
+- 76829C
+- '769886'
+- '769900'
+- 77363B
+- 77609E
+- 77792C
+- '778085'
+- 778EA1
+- 77FA5A
+- 782E00
+- '785635'
+- '785913'
+- 785A52
+- 78676C
+- '788458'
+- 78A3FB
+- 78B7AC
+- 78C0A7
+- 78C6DF
+- 794C32
+- 794D40
+- '796659'
+- '796830'
+- 79697D
+- 796A00
+- '797860'
+- 79AF44
+- 7A6644
+- 7A7A76
+- 7A915B
+- 7B3D4C
+- 7B41AE
+- 7B4965
+- 7B6F6D
+- 7B7784
+- 7B79BF
+- 7B8642
+- 7B9298
+- 7C284D
+- 7C4900
+- 7C4A4A
+- 7C7291
+- 7C743D
+- 7C8B27
+- 7C92D0
+- 7D5463
+- 7D63B7
+- 7D7700
+- 7D828F
+- 7DA88C
+- 7DB3B4
+- 7E3F2C
+- 7E4189
+- 7E517B
+- 7E5492
+- 7E627F
+- 7E7D9E
+- 7E9D53
+- 7F5E2F
+- 7F6348
+- 7F7266
+- 7FA49A
+- 7FC159
+- 7FFFF9
+- 80212D
+- 80261B
+- '806262'
+- 8066E3
+- '807157'
+- 807A7D
+- 807F71
+- '808671'
+- 80928B
+- 80AFBD
+- 80D6B0
+- 813D00
+- 817E52
+- 818E6D
+- 81BEC9
+- 825A47
+- '826400'
+- 82727D
+- 828C8C
+- 828DAF
+- 83083E
+- 833F1B
+- 836B64
+- 8370B2
+- 8388C1
+- 838EF2
+- '843969'
+- 84608E
+- '847247'
+- 847DB0
+- '848500'
+- 848FA3
+- 849F6F
+- 84A23B
+- 84B7D7
+- 84FF00
+- 8500B3
+- '855600'
+- '855852'
+- '856973'
+- '858396'
+- 858B81
+- 858F98
+- 859FC5
+- 85C097
+- 85E8E5
+- '867228'
+- 8672A0
+- 867A8E
+- 867C5D
+- 867D77
+- 86AC69
+- 86CAC1
+- '870051'
+- 873A33
+- 874D58
+- 876F5A
+- 8770CC
+- 87CFD5
+- 87F6BE
+- 88001B
+- 884EA7
+- '885874'
+- 88692B
+- 886F8E
+- 887D6B
+- 88803D
+- '889300'
+- '889448'
+- 88C57E
+- 88D987
+- 895C61
+- '897374'
+- '898767'
+- 898C59
+- 89A082
+- 89A0AA
+- 8A2D40
+- 8A4C43
+- 8A4F39
+- 8A7FDA
+- 8AB3A1
+- 8B339C
+- 8B44F0
+- 8B6559
+- 8B66A4
+- 8B6B41
+- 8B6FFF
+- 8B868E
+- 8B9FEC
+- 8BA19D
+- 8BDFCC
+- 8C0233
+- 8C4044
+- 8C457F
+- 8C5DCF
+- 8C7870
+- 8C8AAF
+- 8D6141
+- 8D7D9E
+- 8D9CAC
+- 8DA292
+- 8E6272
+- 8E7800
+- 8E7E84
+- 8E887D
+- 8E8C37
+- 8E98C7
+- 8EE5A5
+- 8EF8FF
+- 8F29C3
+- 8F7385
+- 8F7F4F
+- 8FF99E
+- 8FF9D9
+- 904B1A
+- 904D67
+- '906024'
+- '906300'
+- '907754'
+- 908E7A
+- 9091A7
+- 90996D
+- 909B9C
+- 90B38D
+- '913300'
+- '916486'
+- 916A6C
+- 919A8E
+- 919CB7
+- 91B1AC
+- 923E53
+- '925590'
+- 92700F
+- 927C67
+- 927CC4
+- '928786'
+- 9290DD
+- 92939D
+- 92987D
+- 92A300
+- 92BFD1
+- 93254E
+- 933A27
+- 935CFD
+- 93763A
+- 93D46C
+- 94262B
+- 945B4C
+- 946C9A
+- '947269'
+- 94851D
+- '948797'
+- 94886D
+- 94A466
+- 94AF59
+- 94CDEB
+- 94CFB9
+- 94D3A2
+- 95AEB2
+- 95C3C1
+- 95D6E7
+- '964396'
+- 964E79
+- 967DB1
+- 96857A
+- 968AC1
+- 969C3A
+- 9743C0
+- '975958'
+- 9788F8
+- 978C50
+- 97ADDA
+- 98767D
+- '988138'
+- 991D62
+- '995866'
+- 996AE2
+- 996E31
+- 996E49
+- 997E7B
+- '998097'
+- 998CA9
+- '999269'
+- 99978C
+- 99BA81
+- 99C500
+- 9A3078
+- 9A6760
+- 9A9200
+- 9A995E
+- 9A9ABC
+- 9AB199
+- 9AC1A5
+- 9B5B30
+- 9B6D83
+- 9B7A68
+- 9BC06E
+- 9BE983
+- 9C7AA0
+- 9C855E
+- 9C9197
+- 9C938D
+- 9C9AFE
+- 9CA7AE
+- 9CACC6
+- 9CEAC3
+- 9D1936
+- 9D401D
+- 9D423A
+- 9D5B77
+- 9DAAA0
+- 9DBFE0
+- 9DC4B6
+- 9DDBD7
+- 9E00AF
+- 9E848E
+- 9E8F7D
+- 9EA2B0
+- 9EA2E3
+- 9EAD41
+- 9EF4E6
+- 9F6100
+- 9F6771
+- 9F7BDE
+- 9F7C5C
+- 9F96A7
+- 9FC0C5
+- A04ADD
+- A06956
+- A07C00
+- A0977C
+- A14100
+- A15B8B
+- A1662F
+- A17472
+- A1A28E
+- A1EE3F
+- A27725
+- A27A48
+- A28C87
+- A2913C
+- A29BCF
+- A2A59F
+- A2A9D1
+- A2B7C2
+- A34958
+- A38771
+- A38BB6
+- A38BD9
+- A3A17B
+- A3FF84
+- A433AD
+- A46C93
+- A479FF
+- A47C8D
+- A4A75A
+- A4BAAE
+- A4C79B
+- A4D493
+- A54064
+- A55ED1
+- A563A1
+- A5A0A6
+- A5A200
+- A60044
+- A67558
+- A67668
+- A68A00
+- A68FA2
+- A69260
+- A6B1B0
+- A6B200
+- A6D3D7
+- A723DB
+- A7313B
+- A7564A
+- A7A4BA
+- A83A74
+- A881C6
+- A88284
+- A88478
+- A89372
+- A89ABD
+- A8BE5B
+- A8D9B8
+- A99E90
+- A9B19C
+- A9BB97
+- A9C7DA
+- AA74AB
+- AA9296
+- AA9B99
+- AAA03F
+- AAB3C0
+- AABDDF
+- AB5215
+- AB6767
+- AB757E
+- AB87A6
+- AB9485
+- ABA5A1
+- ABE0D0
+- ABFAB9
+- AC0059
+- AC3122
+- AC677F
+- AC7342
+- AC8A65
+- AC9D5A
+- ACEEF1
+- AD536E
+- AD94F7
+- ADAEB1
+- ADC9C4
+- ADDE63
+- AE4F7D
+- AE5E03
+- AE62FE
+- AE882B
+- AE93CE
+- AF47C6
+- AF9900
+- AF9FA8
+- AFA077
+- AFE6B3
+- B02D00
+- B05B41
+- B0622E
+- B06558
+- B07A99
+- B08467
+- B0A78E
+- B0AA72
+- B0AACD
+- B0C6AE
+- B0D37A
+- B18B97
+- B1AFA1
+- B1AFBB
+- B1C788
+- B20075
+- B2606E
+- B28039
+- B2944C
+- B29FB5
+- B2A0E8
+- B2B191
+- B2BAB0
+- B2C3C4
+- B2EAA0
+- B2F4DB
+- B37D00
+- B37F78
+- B385B7
+- B3908B
+- B44513
+- B49E86
+- B4AEE3
+- B4B141
+- B4C8FD
+- B52658
+- B5539A
+- B5608C
+- B579D9
+- B58250
+- B596BA
+- B5C4D7
+- B5D5C4
+- B666B8
+- B684F3
+- B69461
+- B6BBE2
+- B7755B
+- B7917D
+- B7B866
+- B86C24
+- B8A4D4
+- B8ACAD
+- B8DED8
+- B8FFD3
+- B969A2
+- B98091
+- B98370
+- B99BA7
+- B9C0C5
+- BA4845
+- BA582C
+- BA726A
+- BA79C3
+- BA7B53
+- BAA99D
+- BAB7B2
+- BAF575
+- BB4161
+- BB8CDE
+- BBA09F
+- BBAEBD
+- BBC2A6
+- BBD6B2
+- BBE8F0
+- BC16C8
+- BC6F76
+- BC9777
+- BCAB00
+- BCAD5B
+- BCC350
+- BCCBBE
+- BCF3EA
+- BD8084
+- BD92AA
+- BE00A7
+- BE6F90
+- BE8F41
+- BEA27A
+- BEA96F
+- BEB288
+- BF3EB3
+- BF6747
+- BFB3A1
+- BFB9D1
+- BFBB00
+- BFC799
+- BFCA78
+- C028E6
+- C05701
+- C05748
+- C05A7D
+- C06D3D
+- C070F7
+- C07B31
+- C07BAC
+- C09093
+- C0ACCC
+- C0D0EE
+- C0D7EC
+- C0DAA2
+- C0E98C
+- C0FFA3
+- C1BCBF
+- C1BDA6
+- C1E9CF
+- C24174
+- C252C7
+- C292CE
+- C3408B
+- C38D65
+- C38E84
+- C3C7C3
+- C44255
+- C44524
+- C47C00
+- C4BC80
+- C58B0C
+- C59055
+- C59BF7
+- C5A3BB
+- C5A58E
+- C5ACB4
+- C5B191
+- C5B9E2
+- C5D9D4
+- C684A4
+- C68FB9
+- C7DC73
+- C86A81
+- C8B9B3
+- C953B0
+- C96666
+- C98073
+- C98565
+- C99C8C
+- C9A2CF
+- C9A2E4
+- CA4800
+- CA834B
+- CAC1CD
+- CAC49B
+- CACCBC
+- CADCC6
+- CAF9BF
+- CB5498
+- CB6DB9
+- CB8F9F
+- CB9F9B
+- CBB943
+- CBC4B7
+- CBCBEB
+- CC48E8
+- CC4D6D
+- CCD2DB
+- CD80DD
+- CD9F70
+- CD9FA8
+- CDB59F
+- CDDD93
+- CDFCFD
+- CE1055
+- CE7550
+- CE7878
+- CE7D8D
+- CE83C5
+- CEB5C9
+- CEC06B
+- CEEADC
+- CEECC3
+- CFEAF3
+- D03E38
+- D069A0
+- D07431
+- D0D092
+- D0EDEB
+- D189FA
+- D18B8A
+- D1B0AD
+- D1B684
+- D1C3A4
+- D1FEEA
+- D25C42
+- D2B3E6
+- D2B561
+- D2EFAB
+- D31CD0
+- D331A3
+- D38939
+- D38F7A
+- D39C4F
+- D3D16F
+- D49CBA
+- D4B400
+- D4C3DF
+- D4DBD3
+- D4E5FF
+- D4FFDB
+- D55FCE
+- D64685
+- D67699
+- D6B9AB
+- D6D2B5
+- D6DEFF
+- D6FE6D
+- D75F8C
+- D7B1D2
+- D7CBCA
+- D7E5F1
+- D86DED
+- D8945D
+- D8B0BE
+- D8C6B7
+- D8EF00
+- D97167
+- D97D64
+- D982B5
+- D9B2FF
+- D9FF97
+- DA6D7C
+- DA8252
+- DA96D0
+- DA9A90
+- DAAE9A
+- DAC6FB
+- DAD2E6
+- DB3400
+- DBAA00
+- DC936C
+- DC9CF5
+- DCC09C
+- DCEAE9
+- DD2468
+- DD989F
+- DDC8D6
+- DDD9CD
+- DE8AA8
+- DEB799
+- DEDCAF
+- DEDE00
+- DEF3D9
+- DF58AF
+- DFADAE
+- E073D2
+- E0CC5C
+- E0D08A
+- E0D4F9
+- E0D8E0
+- E0EDDF
+- E10E8D
+- E1837C
+- E1AE69
+- E1B945
+- E1EF93
+- E26A52
+- E2818A
+- E2A2B4
+- E34DFF
+- E3C3EA
+- E3C9C2
+- E4BE78
+- E4BEC2
+- E4E192
+- E56900
+- E5A18A
+- E5A7D2
+- E5A875
+- E5ADA1
+- E66FBA
+- E68036
+- E6C1D7
+- E6D9D0
+- E6FFCC
+- E6FFF5
+- E7BEB5
+- E7E8D5
+- E8698C
+- E894C0
+- E8ECEF
+- E90032
+- E933A2
+- E9C9B2
+- E9D3D6
+- E9E6FF
+- EAB2CC
+- EB66A1
+- EB84CE
+- EB8C76
+- EB9492
+- EBBFFD
+- EBC96C
+- ECD4ED
+- ECEDE6
+- ED7CFF
+- ED8DA0
+- ED9156
+- EE4D5F
+- EE9E00
+- EF007D
+- EF3941
+- EF4695
+- EFC591
+- EFFFB6
+- F0B7C2
+- F0C1AB
+- F0D5B0
+- F0E0A9
+- F0F9D6
+- F1615A
+- F17867
+- F17DAF
+- F1A8A6
+- F1DE80
+- F1EDCB
+- F250E7
+- F2A274
+- F2B790
+- F2E0ED
+- F2F152
+- F358CA
+- F3BAEB
+- F3BB00
+- F45B38
+- F49200
+- F4DE00
+- F4FFF8
+- F59D8E
+- F69977
+- F6B97B
+- F6BD66
+- F6DBCC
+- F7166C
+- F799B8
+- F79ADA
+- F7BCB8
+- F7D890
+- F8A1AD
+- F8B499
+- F8F0FA
+- F9748C
+- F9CAA4
+- F9D659
+- F9F3B5
+- F9FFEB
+- FAD3CC
+- FBA25D
+- FBCBED
+- FC22BF
+- FCC852
+- FCE5E1
+- FD4EB0
+- FD6BEA
+- FD6E3E
+- FD7700
+- FDAAD1
+- FECADB
