--- a/avail-colours.yml
+++ b/avail-colours.yml
@@ -3,7 +3,6 @@
 - 00001D
 - 0000A5
 - 0000CC
-- '000100'
 - '000913'
 - 000A00
 - 000D20
@@ -201,7 +200,6 @@
 - 2C6B00
 - 2D0005
 - 2D1141
-- 2D54CB
 - 2E1575
 - 2E1902
 - 2E2519
@@ -1383,3 +1381,117 @@
 - FD7700
 - FDAAD1
 - FECADB
+- FECAEC
+- FECAFF
+- FECB87
+- FECB9C
+- FECBAC
+- FECBBA
+- FECBC7
+- FECD4E
+- FED67B
+- FED9A5
+- FED9B7
+- FED9C5
+- FED9EF
+- FEDAD2
+- FEDE00
+- FEE480
+- FEE5E6
+- FEE6DA
+- FEE6F4
+- FEF2C8
+- FEF3FD
+- FEF5DC
+- FEF65E
+- FEFCF6
+- FEFEBE
+- FEFEDA
+- FEFFEE
+- FF003B
+- FF007B
+- FF0093
+- FF00AF
+- FF00FB
+- FF39CA
+- FF3B55
+- FF44A7
+- FF4826
+- FF4BEA
+- FF5295
+- FF5B5C
+- FF5CC1
+- FF6287
+- FF6536
+- FF68AD
+- FF6ADE
+- FF6BFE
+- FF7255
+- FF749F
+- FF7800
+- FF7A8C
+- FF7AC6
+- FF8271
+- FF85B7
+- FF8BA4
+- FF8CDF
+- FF9197
+- FF9500
+- FF9579
+- FF958B
+- FF97CF
+- FF9B53
+- FF9BBB
+- FF9C70
+- FFA1AE
+- FFA6A3
+- FFA794
+- FFAB76
+- FFACD2
+- FFAD63
+- FFAE8D
+- FFB1C5
+- FFB3E9
+- FFB6BA
+- FFB8AD
+- FFB8BB
+- FFB8CA
+- FFB8DB
+- FFB8EE
+- FFB96E
+- FFB984
+- FFB996
+- FFC100
+- FFC3AE
+- FFC88F
+- FFC9A3
+- FFC9C3
+- FFC9DF
+- FFCBF2
+- FFCF51
+- FFD28C
+- FFD3BC
+- FFD7AB
+- FFD8CE
+- FFD97D
+- FFDAF0
+- FFDF00
+- FFE0A9
+- FFE2D2
+- FFE4E3
+- FFE7F2
+- FFE884
+- FFF2C8
+- FFF4FE
+- FFF65D
+- FFF6DD
+- FFFDF7
+- FFFEBF
+- FFFEDA
+- FFFEEA
+- FFFEF7
+- FFFF66
+- FFFFBF
+- FFFFD5
+- FFFFE7
+- FFFFF5
